# sysproxyd

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  install.sh
install/: sysproxyd.service
src/: config.rs  env_manager.rs  gsettings.rs  lib.rs  main.rs
tests/: integration_test.rs
