[package]
name = "sysproxyd"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Lightweight daemon that syncs GNOME/GSettings proxy config to shell env and systemd/D-Bus"
license = "MIT"
repository = "https://github.com/st0nie/sysproxyd"
keywords = ["proxy", "gnome", "gsettings", "systemd", "dbus"]
categories = ["command-line-utilities", "network-programming"]

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
pedantic = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
gio = "0.22.6"
glib = "0.22.7"
log = "0.4.30"
percent-encoding = "2.3.2"
zbus = "5.15.0"

[dev-dependencies]
serial_test = "3.2.0"
